# twilio-realtime

./: Dockerfile  main.py  main_call_fw.py  main_tools.py  main_v2.py  mainv2.py  pyproject.toml
phone_defender/: __main__.py
phone_defender/config/: settings.py
phone_defender/routes/: call_routes.py  websocket_routes.py
phone_defender/services/: openai_service.py  twilio_service.py
