[project]
name = "phone-defender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "openai-agents>=0.0.13",
    "twilio>=9.5.2",
]

[tool.mypy]
ignore_missing_imports = false
check_untyped_defs = true

[tool.ruff]
line-length = 110
indent-width = 4
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["D417", "F401", "UP"]
ignore = ["D202", "UP015", "UP035"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.11.7"]
